Stretch background image of carousel slides to prevent tiling

--- a/app/assets/stylesheets/carousel.css
+++ b/app/assets/stylesheets/carousel.css
@@ -129,6 +129,7 @@ body {
 /* CAROUSEL IMAGES
 -------------------------------------------------- */
 
+
 #carousel-image-home-1{
 	background-image:url('http://nau.edu/uploadedImages/Administrative/Registrar/_Media/DSC_5086_720x350.jpg');
 }
@@ -141,4 +142,6 @@ body {
 #carousel-image-home-3{
 	background-image:url('http://www.empowernetwork.com/georgeb/files/2013/03/internet.jpg');
 }
-
+.carousel-inner>.item {
+	background-size: 100%;
+}
